2011-04-08  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.2.0

	- Add input arguments so that besides the skeleton, we can pass
	the original segmentation. Now, the whole segmentation and not
	only the skeleton will get labelled.

	* Add matlab/test/veins-tree.mat, matlab/test/veins-tree.mha:

	- To test the new functionality in skeleton_label().

	* FiltersToolbox/scinrrd_squeeze.m: v0.1.1

	- Fix bug. Remove dummy dimension also when nrrd.data has only 3
	dimensions. If you have a single slice, Seg3D saves it with a
	3-dimensional matrix (with a first dummy dimension), but 4
	elements for the nrrd.axis. So this function was working wrong for
	1-slice volumes.

	* Add PointToolbox/graph_nn.m: v0.1.0

	- GRAPH_NN Nearest neighbours from a subset of nodes in a graph to
	another subset.

2011-04-07  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add test/veins-tree-skeleton.mat, test/veins-tree-skeleton.mha:

	- A 2D segmentation that looks like a tree of veins (with a
	cycle), to test skeleton_label().

	* Add test directory.

	- Directory to keep data and scripts for tests.

	* Add FiltersToolbox/skeleton_label.m: v0.1.0

	- SKELETON_LABEL Give each branch of a skeleton a different label.

2011-04-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/seg2dmat.m: v0.2.0

	- Add input variable for voxel size different from [1 1 1].

	- Add input flag to create a smaller output matrix, but indexing
	only the segmented voxels of the image, not all the voxels in the
	image.
	
	* Rename img_adjacency_distance.m as im2imat.m.

	* Rename img_adjacency_distance.cpp as im2imat.cpp.

	* FiltersToolbox/img_adjacency_distance.m: v0.1.1

	- Small rewrite of help header to make it more consistent with new
	function seg2dmat.

	* Add FiltersToolbox/seg2dmat.m: v0.1.0

	- SEG2DMAT Local neighbourhood distance matrix between
	segmentation voxels.

2011-04-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
